# RESCRIPt

./: .copier-answers.yml  .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  install-prior-versions.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-dev.yaml  main.yml  update-copyright-headers.yaml
ci/recipe/: meta.yaml
conda-recipe/: meta.yaml
rescript/: __init__.py  _utilities.py  _version.py  bv_brc.py  citations.bib  cleanseq.py  cross_validate.py  degap.py  dereplicate.py  edit_taxonomy.py  evaluate.py  extract_seq_segments.py  filter_length.py  get_data.py  get_eukaryome.py  get_gtdb.py  get_midori2.py  get_pr2.py  get_rdp_data.py  get_unite.py  get_unite_data.py  merge.py  ncbi.py  ncbi_datasets.py  orient.py  parse_rdp.py  parse_silva_taxonomy.py  plugin_setup.py  replace_taxonomy.py  screenseq.py  subsample.py  testing.py  trim_alignment.py
rescript/assets/: index.html
rescript/tests/: __init__.py  test_bv_brc.py  test_cleanseq.py  test_cross_validate.py  test_degap.py  test_derep.py  test_edit_taxonomy.py  test_evaluate.py  test_extract_seq_segments.py  test_filter_length.py  test_get_data.py  test_get_eukaryome.py  test_get_gtdb.py  test_get_midori2.py  test_get_pr2.py  test_get_unite.py  test_merge.py  test_ncbi.py  test_ncbi_datasets.py  test_orient.py  test_parse_silva_taxonomy.py  test_replace_taxonomy.py  test_screenseq.py  test_subsample.py  test_trim_alignment.py
rescript/tests/data/: Human-Kneecap.fasta  bakers-yeast.fasta  (+60 more)
rescript/types/: __init__.py  _format.py  _transformer.py  _type.py  methods.py
(+22 files in other folders)
