[project]
name = "rescript"
authors = [
    { name = "Nicholas Bokulich", email = "nbokulich@gmail.com" }
]
description = "Reference sequence annotation and curation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nbokulich/RESCRIPt"
Repository = "https://github.com/bokulich-lab/rescript"

[project.entry-points.'qiime2.plugins']
"rescript" = "rescript.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "rescript/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rescript*"]

[tool.setuptools.package-data]
rescript = ["**/*"]
